# DRL

./: .gitignore  CMakeLists.txt  build.sh  build.sh.bak.20260715-212859  g6k_gpu_smoke.py  gpu_check.py  pyrightconfig.json  run_all.sh  useful_guide.txt
Backend/: BUILD_STATUS.txt  CMakeLists.txt  build.sh
Backend/old_back/Backend1/: BUILD_STATUS.txt  CMakeLists.txt  build.sh
Backend/old_back/Backend1/src/backend/: bkz2_engine.cpp  bkz2_engine.hpp  enumeration_engine.hpp  sieve_bridge.cpp  sieve_bridge.hpp
Backend/old_back/Backend1/src/cuda/: lattice_cuda.cu  lattice_cuda.h
Backend/old_back/Backend1/src/sieve_engine/include/: pool_hd.h
Backend/old_back/Backend1/src/sieve_engine/src/: pool_hd_avx512.cpp  vec_avx512.cpp  vec_native.cpp
Backend/old_back/cu1/: lattice_cuda.h
Backend/old_back/pure/: bridge.h  fplll.cpp  lattice_backend.cpp
Backend/src/backend/: bkz2_engine.cpp  bkz2_engine.hpp  enumeration_engine.cpp  enumeration_engine.hpp  extreme_reducer.cpp  extreme_reducer.hpp  lattice_backend.cpp  matrix_utils.cpp  matrix_utils.hpp  sieve_bridge.cpp  sieve_bridge.hpp  types.hpp
Backend/src/cuda/: lattice_cuda.cu
Backend/src/sieve_engine/include/: config.h
Backend/src/sieve_engine/src/: pool_hd_device.cu  pool_hd_native.cpp
dataset/: run_fplll.cpp  svp_dim100_seed3234.txt  svp_dim100_seed3473.txt  svp_dim100_seed4582.txt  svp_dim100_seed46937.txt  svp_dim101_seed1.txt  svp_dim101_seed1423.txt  svp_dim101_seed2438.txt  svp_dim101_seed3128.txt  svp_dim102_seed1186.txt  svp_dim102_seed2319.txt  svp_dim102_seed354.txt  svp_dim102_seed599.txt  svp_dim102_seed832.txt  svp_dim102_seed89.txt  svp_dim103_seed10.txt  svp_dim103_seed246.txt  svp_dim103_seed2567.txt  svp_dim103_seed3.txt  svp_dim103_seed6787.txt  svp_dim103_seed75.txt  svp_dim104_seed10.txt  svp_dim104_seed4081.txt  svp_dim104_seed82.txt  svp_dim104_seed85.txt  svp_dim105_seed1220.txt  svp_dim105_seed169.txt  svp_dim105_seed185.txt  svp_dim105_seed7251.txt  svp_dim105_seed997.txt  svp_dim106_seed513.txt  svp_dim106_seed563.txt  svp_dim106_seed73.txt  svp_dim106_seed8.txt  svp_dim107_seed1340.txt  svp_dim107_seed28.txt  svp_dim107_seed360.txt  svp_dim107_seed518.txt  svp_dim107_seed77.txt  svp_dim108_seed21.txt  (+1387 more)
generator/: generate_random
results/: A5_1UP_best_results_dim68.txt  A5_2UP_L_best_results_low_dim40.txt  A5_2UP_L_best_results_low_dim40faillog.txt  A5_2UP_L_best_results_low_dim40p1.txt  A5_2UP_L_best_results_low_dim40p2.txt  A5_2UP_best_results_dim68.txt  A6_L_best_results_low_dim40.txt  A6_L_best_results_low_dim43.txt  A6_best_dim67.txt  best_results_dim67.txt  best_results_dim69.txt  fplll_baseline_norm_gh.csv  initial_state_dim67seed13.txt  reduced_matrix.txt  svpchallenge_fplll_baseline_norm_gh.csv  svpchallenge_fplll_baseline_report.md
results/a10_shared/: .summary.txt.swp  dim50_seed0.txt  dim50_seed1.txt  dim51_seed0.txt  dim51_seed1.txt  dim52_seed0.txt  dim52_seed1.txt  dim53_seed0.txt  dim53_seed1.txt  dim54_seed0.txt  dim54_seed1.txt  dim55_seed0.txt  dim55_seed1.txt  dim56_seed0.txt  dim56_seed1.txt  dim57_seed0.txt  dim57_seed42.txt  dim58_seed0.txt  dim58_seed89.txt  dim59_seed0.txt  dim59_seed6.txt  dim60_seed0.txt  dim60_seed1.txt  dim61_seed0.txt  dim61_seed1.txt  dim62_seed0.txt  dim62_seed1.txt  dim63_seed0.txt  dim63_seed1.txt  dim64_seed0.txt  dim64_seed1.txt  dim65_seed0.txt  dim65_seed1.txt  dim66_seed2.txt  dim66_seed3.txt  dim67_seed0.txt  dim68_seed0.txt  dim69_seed0.txt  dim70_seed0.txt  dim71_seed0.txt  (+10 more)
results/a5up/: A5UP_best_results_dim68.txt
results/a5up2/: A5_2UP_L_best_results_low_dim40.txt  A5_2UP_best_results_low_dim40.txt
results/a6/: A6_L_best_results_low_dim40.txt  A6_L_best_results_low_dim55.txt  A6_best_dim55.txt  A6_best_dim57.txt  A6_best_dim67.txt
results/a6up_dim50/: dim50_seed0.txt  dim50_seed1.txt  dim50_seed11.txt  dim50_seed13.txt  dim50_seed2.txt  dim50_seed3.txt  dim50_seed5.txt  dim50_seed7.txt  dim50_seed9.txt
results/a6up_dim54/: dim54_seed1.txt  dim54_seed11.txt  dim54_seed13.txt  dim54_seed2.txt  dim54_seed3.txt  dim54_seed5.txt  dim54_summary.txt
results/a6up_dim54_local/: dim54_seed0.txt  dim54_seed1.txt  dim54_seed11.txt  dim54_seed13.txt  dim54_seed2.txt  dim54_seed5.txt  dim54_seed7.txt  dim54_seed9.txt
results/a6up_dim55/: dim55_seed0.txt  dim55_seed1.txt  dim55_seed11.txt  dim55_seed13.txt  dim55_seed2.txt  dim55_seed3.txt  dim55_seed4.txt  dim55_seed5.txt  dim55_seed7.txt  dim55_seed9.txt  dim55_summary.txt
results/a6up_dim56/: dim56_seed0.txt  dim56_seed1.txt  dim56_seed11.txt  dim56_seed3.txt  dim56_seed7.txt  dim56_summary.txt
results/a6up_dim57/: dim57_seed0.txt  dim57_seed1.txt  dim57_seed11.txt  dim57_seed13.txt  dim57_seed2.txt  dim57_seed3.txt  dim57_seed5.txt  dim57_seed7.txt  dim57_seed9.txt
results/a6up_dim58/: dim58_seed0.txt  dim58_seed11.txt  dim58_seed13.txt  dim58_seed2.txt  dim58_seed3.txt  dim58_seed5.txt  dim58_seed7.txt  dim58_seed9.txt
results/a6up_dim59/: dim59_seed0.txt  dim59_seed1.txt  dim59_seed11.txt  dim59_seed13.txt  dim59_seed2.txt  dim59_seed3.txt  dim59_seed5.txt  dim59_seed7.txt  dim59_seed9.txt
results/a6up_dim67/: dim67_results.txt  dim67_seed1.txt  dim67_seed7.txt  dim67_seed9.txt
results/analysis_outputs/: analysis_report.txt  missing_experiments_and_required_logs.txt
results/bench/: per_dim_stats.csv  per_dim_stats.txt  stats_by_method.csv
results/fplll_baseline/: fplll_norm_gh.csv
results/unknown/: best_results_dim68.txt
rustcore/: Cargo.toml  build.rs
rustcore/src/: lib.rs
rustcore_notUsed/: Cargo.toml
scripts/: a7up.py  agent.py  agent2.py  agent3.py  agent4.py  agent5.py  agent5PrintBackRELUupdated.py  agent6.py  agent6_multi.py  agent7full.py  analyze_results_for_thesis.py  plot6.py  plot_heatmap.py  plot_heatmap_baseline_vs_drl.py  test_rs.py  test_rust.py
scripts/agent/: a10.py  a5lowdim.py  a8.py  a8_server.py  a9.py  agent.py  agent2.py  agent4.py  agent5.py  agent6_multi.py  run_a10_screen.sh
scripts/analyse/: analyse.py  analyze_fplll_norm_gh.py  (+22 more)
src/: bridge.cpp  bridge.h  fplll.cpp  lattice_backend.cpp  lattice_cuda.cu  run_lll
(+1742 files in other folders)
